samples/_failures_safe/1761157663_8e8bfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15c227df.c:118:1: error: expected ‘{’ at end of input
  118 | void pointcloud_free(struct
      | ^~~~
